--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>CI/CD Automation Demo</title>
 </head>
 <body>
-  <h1>Hello from Automated Deployment</h1>
+  <h1>Hello from Lan</h1>
   <p>This website is deployed automatically using GitHub, Jenkins, and Docker.</p>
 </body>
 </html>
